# DEF-W9-22_PiLoT

./: .env.serve  .gitignore  ASSETS.md  CLAUDE.md  Dockerfile.serve  MODEL_CARD.md  NEXT_STEPS.md  PIPELINE_MAP.md  PRD.md  README.md  TRAINING_REPORT.md  anima_module.yaml  docker-compose.serve.yml  pyproject.toml
assets/: hero.html
configs/: debug.toml  paper.toml  train_real.toml
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-loss-functions.md  PRD-04-training-pipeline.md  PRD-05-evaluation.md  PRD-06-export-pipeline.md  PRD-07-integration.md
scripts/: evaluate.py  export.py  generate_synthetic.py  post_train.sh  train.py  train_cu.py
src/pilot/: __init__.py  dataset.py  dataset_multi.py  evaluate.py  export.py  losses.py  model.py  serve.py  train.py  utils.py
src/pilot/backends/: __init__.py
src/pilot/backends/cuda/: __init__.py  kernels.py
tasks/: INDEX.md
tests/: test_cuda_kernels.py  test_dataset.py  test_model.py
