[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pilot"
version = "0.1.0"
description = "PiLoT: Neural Pixel-to-3D Registration for UAV Geo-localization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "tqdm>=4.65",
    "tomli>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "tensorboard>=2.14",
    "safetensors>=0.4",
    "onnx>=1.15",
    "timm>=1.0",
    "pyproj>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.3",
]
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pilot"]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu128"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4"]
ignore = ["N806", "N803", "N802", "N812"]  # Uppercase vars for SE(3); F = functional

[tool.pytest.ini_options]
testpaths = ["tests"]
